# suikapy

./: .gitignore  README.md  pyproject.toml
src/: game.py
